--- a/streamprocessor/eventsimulator/pom.xml
+++ b/streamprocessor/eventsimulator/pom.xml
@@ -84,6 +84,11 @@
             <artifactId>axis2</artifactId>
             <version>1.6.1.wso2v12</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+        </dependency>
 
         <!--<dependency>-->
         <!--<groupId>org.wso2.siddhi</groupId>-->
